--- a/tasks/ai_svc_check_cluster_install_finished.yaml
+++ b/tasks/ai_svc_check_cluster_install_finished.yaml
@@ -1,13 +1,19 @@
 ---
-- name: Ensure the cluster is fully installed
-  uri:
-    headers: "{{ compiled_uri_headers }}"
-    url: "{{ assisted_service_endpoint }}/clusters/{{ cluster_id }}"
-    return_content: yes
-    method: GET
-    status_code: 200
-    body_format: json
-  register: cluster_install_status
-  until: (cluster_install_status.json.status == "installed")
-  retries: 120
-  delay: 30
+- name: Cluster Install progression
+  block:
+  - name: Ensure the cluster is fully installed
+    uri:
+      headers: "{{ compiled_uri_headers }}"
+      url: "{{ assisted_service_endpoint }}/clusters/{{ cluster_id }}"
+      return_content: yes
+      method: GET
+      status_code: 200
+      body_format: json
+    register: cluster_install_status
+    until: (cluster_install_status.json.status == "installed")
+    retries: 120
+    delay: 30
+  rescue:
+  - name: failed!
+    debug:
+      msg: "{{ cluster_install_status }}"
