--- a/tasks/nutanix_vm_meta_setup_nic_facts.yaml
+++ b/tasks/nutanix_vm_meta_setup_nic_facts.yaml
@@ -5,8 +5,8 @@
     nic:
       mac_address: "{{ iface.mac_address }}"
       is_connected: true
-      adapter_type: E1000e
       network_uuid: "{{ nutanix_network_uuid }}"
+      #adapter_type: E1000e
     v3_nic:
       nic_type: NORMAL_NIC
       mac_address: "{{ iface.mac_address }}"
