--- a/example_vars/nutanix-config.yaml
+++ b/example_vars/nutanix-config.yaml
@@ -1,6 +1,8 @@
 ---
-# nutanix_prism_endpoint: The base endpoint of the Prism appliance
-nutanix_prism_endpoint: https://prism.example.com:9440
+# nutanix_prism_hostname: The IP or Hostname of your Prism instance
+nutanix_prism_hostname: ahv-cvm.kemo.labs
+# nutanix_prism_port: The port Prism is accessible from
+nutanix_prism_port: 9440
 
 # nutanix_prism_skip_ssl_verification disables SSL Certificate Chain Verification when enabled
 nutanix_prism_skip_ssl_verification: true
@@ -23,5 +25,14 @@ nutanix_prism_vm_storage_container_name: machines
 nutanix_prism_image_storage_container_name: images
 
 ######################### General Options
+nutanix_prism_endpoint: "https://{{ nutanix_prism_hostname }}:{{ nutanix_prism_port }}"
 nutanix_prism_api_v3_base: "/api/nutanix/v3"
 nutanix_prism_api_v2_base: "/PrismGateway/services/rest/v2.0"
+
+######################### CSI Deployment Role Variables
+nutanix_csi_prism_hostname: "{{ nutanix_prism_hostname }}"
+nutanix_csi_prism_port: "{{ nutanix_prism_port }}"
+nutanix_csi_prism_username: "{{ nutanix_prism_username }}"
+nutanix_csi_prism_password: "{{ nutanix_prism_password }}"
+nutanix_csi_storage_container_name: "{{ nutanix_prism_vm_storage_container_name }}"
+nutanix_csi_dataservices_ip: 1.2.3.4
