--- a/example_vars/nutanix-config.yaml
+++ b/example_vars/nutanix-config.yaml
@@ -24,16 +24,24 @@ nutanix_prism_vm_storage_container_name: machines
 # nutanix_prism_image_storage_container_name is the name of the Storage Container that will be used when uploading the ISO to the Image Configuration service
 nutanix_prism_image_storage_container_name: images
 
-######################### General Options
-nutanix_prism_endpoint: "https://{{ nutanix_prism_hostname }}:{{ nutanix_prism_port }}"
-nutanix_prism_api_v3_base: "/api/nutanix/v3"
-nutanix_prism_api_v2_base: "/PrismGateway/services/rest/v2.0"
-
-######################### CSI Deployment Role Variables
-deploy_nutanix_csi: true
+######################### Nutanix CSI Deployment Role Variables
+### Nutanix Volumes StorageClass, iSCSI based, no RWX
+nutanix_csi_deploy_volumes_storageclass: true
 nutanix_csi_prism_hostname: "{{ nutanix_prism_hostname }}"
 nutanix_csi_prism_port: "{{ nutanix_prism_port }}"
 nutanix_csi_prism_username: "{{ nutanix_prism_username }}"
 nutanix_csi_prism_password: "{{ nutanix_prism_password }}"
-nutanix_csi_storage_container_name: "{{ nutanix_prism_vm_storage_container_name }}"
-nutanix_csi_dataservices_ip: 1.2.3.4
+nutanix_csi_volumes_storage_container_name: "{{ nutanix_prism_vm_storage_container_name }}"
+nutanix_csi_volumes_dataservices_ip: 1.2.3.4
+## nutanix_csi_deploy_iscsid_machineconfig is required to enable the iSCSId SystemD Service to bind the PVCs to the Pods
+nutanix_csi_deploy_iscsid_machineconfig: true
+
+### Nutanix Files StorageClass, NFS Based, RWO and RWX supported
+nutanix_csi_deploy_files_storageclass: false
+nutanix_csi_files_nfs_server: 5.6.7.8
+nutanix_csi_files_nfs_path: somePath
+
+######################### General Variables, no need to edit
+nutanix_prism_endpoint: "https://{{ nutanix_prism_hostname }}:{{ nutanix_prism_port }}"
+nutanix_prism_api_v3_base: "/api/nutanix/v3"
+nutanix_prism_api_v2_base: "/PrismGateway/services/rest/v2.0"
