--- a/example_vars/nutanix-config.yaml
+++ b/example_vars/nutanix-config.yaml
@@ -41,6 +41,7 @@ nutanix_csi_volumes_storage_container_name: "{{ nutanix_prism_vm_storage_contain
 nutanix_csi_volumes_dataservices_ip: 1.2.3.4
 
 ### Nutanix Files StorageClass, NFS Based, RWO and RWX supported
+#### Assumes the NFS Store has All Users Squashed to nobody:nobody (65534:65534)
 nutanix_csi_deploy_files_storageclass: false
 nutanix_csi_files_nfs_server: 5.6.7.8
 nutanix_csi_files_nfs_path: /sharePath
