--- a/bootstrap.yaml
+++ b/bootstrap.yaml
@@ -92,6 +92,10 @@
         - name: Patch in Cluster Preconfiguration for Networking
           include_tasks: tasks/ai_svc_preconfig_networking.yaml
 
+        - name: Inject extra manifests
+          include_tasks: tasks/ai_svc_preconfig_extra_manifests.yaml
+          when: injected_manifests is defined
+
         - name: Configure ISO Parameters
           include_tasks: tasks/ai_svc_configure_iso_params.yaml
           
